TODO 增加了一些TODO信息

--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html lang="zh_CN">
+<!--
+TODO
+  获取简历的接口要修改
+  查看职位详情还没做
+  url没有带activityId导致统计不到，而且是写死的
+  登录后返回不一定可以获取到登录信息
+  视频面试某些浏览器（Edge、Chrome）下无法看到视频，需要回家带个摄像头或者用笔记本进行测试看看哪里有问题
+-->
 <head>
   <meta charset="UTF-8">
   <!--<meta content="width=420, user-scalable=no" name="viewport">-->
