--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html lang="zh_CN">
 <!--
-TODO
-  获取简历的接口要修改
-  查看职位详情还没做
-  [*]url没有带activityId导致统计不到，而且是写死的
-  [*]登录后返回不一定可以获取到登录信息
-  登录以后的样式还没有完成
-  [*](https下iframe毫无问题！)视频面试某些浏览器（Edge、Chrome）下无法看到视频，需要回家带个摄像头或者用笔记本进行测试看看哪里有问题
+TODO 登陆以后头像的变化
+TODO 视频聊天暂时采用弹出新窗口实现
+TODO 查看简历的样式设计
+TODO 低分辨率显示器适配
 -->
 <head>
   <meta charset="UTF-8">
