--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ TODO 查看简历的样式设计
   <!-- Header -->
   <div id="header">
     <div class="header_panel">
-      <a href="#" class="to_home">返回首页</a>
+      <a href="/" class="to_home">返回首页</a>
       <ul id="count_panel">
         <li>浏览量&nbsp;<span>{{ activityRecord.pageviews ? activityRecord.pageviews : 0 }}</span>，</li>
         <li>参会企业&nbsp;<span>{{ activityRecord.companyCount }}</span>，</li>
