Remove 暂时去掉了在线订展功能

--- a/index.html
+++ b/index.html
@@ -138,8 +138,9 @@ TODO 查看简历的样式设计
             <div id="goto_panel">
               <div id="view-invitation-card" @click="activityDescDialog=true;" v-if="!personUserInfo && !companyUserInfo"></div>
               <div id="view-invitation-card_long" @click="activityDescDialog=true;" v-if="personUserInfo"></div>
-              <a id="order-exhibition" href="#" v-if="!personUserInfo && !companyUserInfo"><!--TODO 这里还没有链接--></a>
-              <a id="order-exhibition_long" href="#" v-if="companyUserInfo"><!--TODO 这里还没有链接--></a>
+              <!--TODO 没有做所以先去掉-->
+              <!--<a id="order-exhibition" href="#" v-if="!personUserInfo && !companyUserInfo">&lt;!&ndash;TODO 这里还没有链接&ndash;&gt;</a>-->
+              <!--<a id="order-exhibition_long" href="#" v-if="companyUserInfo">&lt;!&ndash;TODO 这里还没有链接&ndash;&gt;</a>-->
             </div>
           </div>
           <!--/倒计时区-->
