--- a/index.html
+++ b/index.html
@@ -823,6 +823,6 @@ TODO 查看简历的样式设计
   <!-- /区域内放置Dialog -->
 </div>
 <!--/主内容-->
-<script src="index.js"></script>
+<script src="index.js?v=20210203a"></script>
 </body>
 </html>
