Update 优化了企业详情的样式 Fixed 修复了企业详情在聊天面板中一截看不到的问题

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
         <iframe class="video-chat model" frameborder="0"></iframe>
         <!--/在线聊天模块-->
         <!--个人简历模块-->
-        <div class="person-resume mobel">
+        <div class="person-resume model">
           <div v-if="currentResumeInfo" class="resume-detail">
             <div class="cj-flex cj-flex-nowrap cj-align-items-center cj-justify-content-around">
               <!--头像-->
