--- a/index.html
+++ b/index.html
@@ -214,7 +214,11 @@
               }}
             </div>
             <div class="company-info_subtitle">企业简介</div>
-            <div class="company-info_content company-info_desc">{{ currentCompanyInfo.companyInfo }}</div>
+            <div class="company-info_content company-info_desc cj-ellipsis-multiline">
+              {{ currentCompanyInfo.companyInfo }}
+              <div class="unfold" @click="doFold('#chat-area_other')">【展开】</div>
+              <div class="fold" @click="doFold('#chat-area_other')">【收拢】</div>
+            </div>
             <div class="company-info_subtitle">招聘职位</div>
             <div class="company-info_content">
               <!--职位列表-->
@@ -594,7 +598,11 @@
         }}
       </div>
       <div class="company-info_subtitle">企业简介</div>
-      <div class="company-info_content company-info_desc">{{ currentCompanyInfo.companyInfo }}</div>
+      <div class="company-info_content company-info_desc cj-ellipsis-multiline">
+        {{ currentCompanyInfo.companyInfo }}
+        <div class="unfold" @click="doFold('#company-info')">【展开】</div>
+        <div class="fold" @click="doFold('#company-info')">【收拢】</div>
+      </div>
       <div class="company-info_subtitle">招聘职位</div>
       <div class="company-info_content">
         <!--职位列表-->
@@ -820,6 +828,6 @@
   <!-- /区域内放置Dialog -->
 </div>
 <!--/主内容-->
-<script src="index.js?v=20210203e"></script>
+<script src="index.js?v=20210203f"></script>
 </body>
 </html>
