--- a/index.html
+++ b/index.html
@@ -443,7 +443,8 @@
               </div>
               <div class="company_lastUpdateDate">刷新时间：{{ item.lastUpdateDate }}</div>
               <!--职位列表-->
-              <div @click="showRecruitList(item.companyId)" class="recruit-list">
+              <!--根据业务要求，点击查看职位列表改成点击查看企业详情和职位列表<div @click="showRecruitList(item.companyId)" class="recruit-list">-->
+              <div @click="showCurrentCompanyInfo(item.companyId)" class="recruit-list">
                 <div class="recruit-list_panel" title="点击投递职位">
                   <div class="recruit-item">
                     <div class="see-more">查看更多</div>
