--- a/index.html
+++ b/index.html
@@ -108,15 +108,15 @@
             <!--有头像-->
             <div v-if="personUserInfo.photoLink" class="avatar" :style="'background-image:url(//www.hnrcsc.com/share/'+personUserInfo.photoLink+')'"></div>
             <a class="name">{{ personUserInfo.personName }}</a>
-            <div class="view-message" @click="viewMessage">查看消息<span>{{ unreadMsgCount }}</span></div>
-            <div class="logout" @click="logout">退出登录</div>
+            <div class="view-message" @click="viewMessage">消息<span>{{ unreadMsgCount }}</span></div>
+            <div class="logout" @click="logout">退出</div>
           </div>
           <div id="company-info_panel" v-if="companyUserInfo">
             <div v-if="!companyUserInfo.logoUrl" class="avatar" :style="'background-image:url(images/icon_login_company@2x.png)'"></div>
             <div v-if="companyUserInfo.logoUrl" class="avatar" :style="'background-image:url(//www.hnrcsc.com'+companyUserInfo.logoUrl+')'"></div>
             <a class="name">{{ companyUserInfo.userName }}</a>
-            <div class="view-message" @click="viewMessage">查看消息<span>{{ unreadMsgCount }}</span></div>
-            <div class="logout" @click="logout">退出登录</div>
+            <div class="view-message" @click="viewMessage">消息<span>{{ unreadMsgCount }}</span></div>
+            <div class="logout" @click="logout">退出</div>
           </div>
           <!--/登录区-->
           <!--倒计时区-->
