--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <div id="recruitment_section" class="cj-flex cj-justify-content-start cj-align-items-center" v-if="currentTab===0">
             <!--企业搜索条-->
             <div id="company-search_panel" class="keyword_search">
-              <input type="text" placeholder="请输入您要搜索的企业名称" v-model="searchCompanyKeyword">
+              <input type="text" placeholder="请输入您要搜索的企业或职位名称" v-model="searchCompanyKeyword">
               <button type="button">搜索</button>
             </div>
             <!--/企业搜索条-->
