Feat Add 加入自动登录的机制，检查用户如果已经登录则自动获取登录信息 Feat Add 同样，为了自动登录中用户无法退出，加入了退出机制，用户可以在该页面中退出，不会再次自动登录，除非页面关闭。

--- a/index.html
+++ b/index.html
@@ -851,7 +851,7 @@
   <!-- /区域内放置Dialog -->
 </div>
 <!--/主内容-->
-<script src="index.js?v=20210220e"></script>
+<script src="index.js?v=20210220j"></script>
 <script>
   //根据浏览器窗口宽度计算内容框体宽度
   (function() {
