--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <div id="jobseeker_section" class="cj-flex cj-justify-content-start cj-align-items-center" v-if="currentTab===1">
             <!--个人搜索条-->
             <div id="person-search_panel" class="keyword_search">
-              <input type="text" placeholder="请输入您要搜索的求职者名称" v-model="searchPersonKeyword">
+              <input type="text" placeholder="请输入您要搜索的求职者名称或学历或职位" v-model="searchPersonKeyword">
               <button type="button">搜索</button>
             </div>
             <!--/个人搜索条-->
@@ -511,7 +511,7 @@
         <div class="out_border_2">
           <!-- 在线求职者列表 -->
           <div id="job-seeker_list" :class="{'online': currentPersonShowStatus===1}" v-if="jobSeekerList">
-            <div class="job-seeker_item" v-if="searchPersonKeyword.trim()==='' || item.personName.indexOf(searchPersonKeyword)>-1" :class="{'offline':moment().diff(moment(item.lastUpdateDate),'minutes')>offlineTimeout}" v-for="item in jobSeekerList">
+            <div class="job-seeker_item" v-if="searchPersonKeyword.trim()==='' || (item.personName.indexOf(searchPersonKeyword)>-1 || (item.highestEdu||'').indexOf(searchPersonKeyword)>-1) || (item.positionCode||'').indexOf(searchPersonKeyword)>-1 " :class="{'offline':moment().diff(moment(item.lastUpdateDate),'minutes')>offlineTimeout}" v-for="item in jobSeekerList">
               <div class="online_status online">在线</div>
               <div class="online_status offline">离线</div>
               <!--<span>{{item.lastUpdateDate}} {{moment().diff(moment(item.lastUpdateDate),'minutes')}}</span>-->
@@ -851,7 +851,7 @@
   <!-- /区域内放置Dialog -->
 </div>
 <!--/主内容-->
-<script src="index.js?v=20210220j"></script>
+<script src="index.js?v=20210220k"></script>
 <script>
   //根据浏览器窗口宽度计算内容框体宽度
   (function() {
