--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <!--Tab-->
           <ul id="tab">
             <li @click="currentTab=0" :class="{'active':currentTab===0}">招聘大厅</li>
-            <li @click="currentTab=1" :class="{'active':currentTab===1}">求职大厅</li>
+            <li @click="currentTab=1" :class="{'active':currentTab===1}">求职者大厅</li>
           </ul>
           <!--/Tab-->
           <!--招聘大厅用-->
